k8s-django-files/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: ClusterIP
  selector:
    app: django-web
  ports:
  - port: 8000
    targetPort: 8000
